# lumeflow-sdk

./: .bazelrc  MODULE.bazel  README.md  install-lumeflow-local-smoketest.sh  workspace_status.sh
bazel/archive_paths/: BUILD.bazel  archive_paths_info.bzl
bazel/lore/: BUILD.bazel  base_publisher.py  build_labels.py  extract_graph.py  extract_ports.py  generate_graph_publisher_lib.py  generate_image_descriptor_lib.py  rules.bzl  validate_semver.py
bazel/lore/tests/: build_labels_test.py  extract_graph_test.py  extract_ports_test.py  fixture_graph.py  fixture_labeled_binary.py  fixture_operator.py  validate_semver_test.py
bazel/pkg/: BUILD.bazel  app_image_tool.py  depset_tar_tool.py  elf_closure.py  oci_executor_tool.py  pkg_tool.py  rules.bzl  shared_rules_impl.bzl  status_substitutor.py
bazel/python/: BUILD.bazel  install_runner.sh  lock_runner.sh  pytool.py  requirements.txt  rules.bzl  test_wheel_lib.py
bazel/python/tests/: pip_install_wheels_test.py  test_wheel_requirements.txt
bazel/sys/: BUILD.bazel  toolchain.bzl
documentation/lumeflow/: API_REFERENCE.md  ARCHITECTURE.md  DEBUGGING_A_LUMEFLOW_APPLICATION_ON_A_LUMEFLOW_CLUSTER.md  GETTING_STARTED.md  WRITING_A_LUMEFLOW_APPLICATION.md
documentation/lumeflow/diagrams/: 11_2_sidecar_topology.puml  13_4_bridge_topology_diagram.puml  13_5_bridge_request_sequence.puml  14_3_injection_sequence_diagram.puml  16_3_cancellation_sequence_diagram.puml  19_2_security_trust_boundaries.puml  19_3_security_issuance_and_renewal.puml  20_4_operational_diagram.puml  23_1_full_sync_request_path.puml  23_2_full_async_injection_path.puml  23_3_full_cancellation_path.puml  4_1_high_level_topology.puml  4_2_cluster_bootstrap_topology_in_demo.puml  6_2_submit_phase.puml  6_4_start_phase.puml  7_4_job_status_transition_diagram.puml  getting_started_smoketest_rpc_flow.puml  pattern_a_asynchronous_pipeline.puml  pattern_b_synchronous_bridge_pipeline.puml
example_apps/lumeflow_rag/: BUILD.bazel  CHAT_AGENT.md  LLM_RETRIEVER_INDEXER_PR_PLAN.md  OBSERVABILITY.md  OPERATORS.md  README.md  requirements.txt
example_apps/lumeflow_rag/common/: BUILD.bazel  Dockerfile.ollama_operator_base  Dockerfile.ollama_operator_base_mxbai_embed_large  Dockerfile.ollama_operator_base_nomic_embed_text_v1_5  Dockerfile.ollama_operator_base_nomic_embed_text_v2_moe  Dockerfile.ollama_operator_base_qwen25_1_5b  Dockerfile.ollama_operator_base_qwen25_3b  Dockerfile.ollama_operator_base_qwen25_7b  build_ollama_operator_base_image.sh  collection_naming.py  ollama_model_discovery.py  operators.proto  payload_contracts.py  rag_uri.py
example_apps/lumeflow_rag/common/tests/: collection_naming_test.py  payload_contracts_test.py  rag_uri_test.py
example_apps/lumeflow_rag/extract/: BUILD.bazel  agent_flow_light.py  chat_agent_light.sh  chat_agent_light_main.py  chromadb_retriever_operator.py  chromadb_retriever_operator_requirements.txt  llm_agent_operator.py  llm_agent_operator_requirements.txt
example_apps/lumeflow_rag/extract/tests/: agent_flow_light_test.py  chat_agent_light_main_test.py  chromadb_retriever_operator_cartond_test.py  llm_agent_operator_cartond_test.py
example_apps/lumeflow_rag/ingest/: BUILD.bazel  chromadb_indexer_operator.py  chunker_operator.py  chunker_operator_requirements.txt  ingest_flow_light.py  launch_indexer_light.sh  launch_indexer_light_main.py  structure_extractor_operator.py  structured_extractor_operator_requirements.txt  watch_chroma_counts.sh  watch_chroma_counts_main.py
example_apps/lumeflow_rag/ingest/tests/: chromadb_indexer_operator_cartond_test.py  chunker_operator_cartond_test.py  ingest_flow_light_test.py  launch_indexer_light_main_test.py  structure_extractor_operator_cartond_test.py
